Fixed slider mis-aligned text on tablet and mobile screens to be aligned to the left

--- a/profiles/openenterprise/themes/bella/less/content.less
+++ b/profiles/openenterprise/themes/bella/less/content.less
@@ -77,6 +77,12 @@
 				margin-bottom: 0.75em;
 				text-transform: uppercase;
 				text-shadow: none;
+
+			  	@media @tablet, @mobile {
+				  text-align: left;
+				  margin-top:0.5em;
+				  margin-bottom:0.5em;
+				}
 			}
 			p {
 				color: @gray;
@@ -89,6 +95,10 @@
 				font-weight: 500;
 				margin-top: 1em;
 				padding: 10px 15px;
+
+			  	@media @tablet, @mobile {
+				  margin-top: 0;
+				}
 			}
 			@media @mobile, @tablet-max {
 				left: 0;
@@ -116,6 +126,8 @@
 		}
 		li {
 			border-color: @brand-primary;
+
+		  	&:before {content: '';} // Ahmad: Disables ol numbers that appear on slider
 			&.active {
 				background-color: @brand-primary;
 			}
